added abput me page placeholder and minor update

--- a/dev.html
+++ b/dev.html
@@ -160,7 +160,8 @@ document.body.appendChild(renderer.domElement); //create canvas on the html body
 </pre></code></div>
                 <br />
                 <h2>2. Interactive Controls</h2>
-                <p>Then i use an additional ThreeJS library called OrbitControls.js to add interactive camera controls for
+                <p>Then i use an additional ThreeJS library called OrbitControls.js to add interactive camera controls
+                    for
                     the user to navigate around the 3D space. Then i also modify a few parameters of the OrbitControls
                     to make it <em>pan smoothly</em> as the user navigates around.</p>
                 <div class="contentPlaceholder"><code>
@@ -204,10 +205,11 @@ objArray.push(meshes);
 }
     }</code></pre>
                 </div>
-<br />
+                <br />
                 <h2>4. Animating the objects to move based of the 'Golden Ratio'</h2>
-                <p>The last step is to animate the objects, the goal i had in mind is to make the objects move with some
-                    certain <em>flow</em>. So i uses <code>Math.PI</code> to make the objects move according to the
+                <p>The last step is to animate the objects, the goal i had in mind is to make the objects move(in
+                    rotation) with some
+                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects rotate according to the
                     <em>golden ratio</em>.</p>
                 <div class="contentPlaceholder">
                     <pre><code>
