--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ animation: AnimationName 12s ease infinite;">
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
                 Welcome.</h1>
             <p style="text-align: center;margin: 0px;">In this portfolio is an overwiew of my studies in the semester 2 of ICT &
-                Media Design.</p>
+                Media Design.<br /><a href="about.html" style="color: white;">About me</a></p>
+                
             <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
             <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
         </section>
