--- a/dev.html
+++ b/dev.html
@@ -32,7 +32,7 @@ animation: AnimationName 12s ease infinite;">
         <div id="title">
             <h2 id="titleText">Development</h1>
         </div>
-        <br />
+        <br /><br />
         <div id="learningOutcome">
             <h2 style="text-align: center;font-size: 40px;">Learning Outcome</h2>
             <p style="text-align: center;">Ability to develop media products by programming and integrating proofs of
@@ -40,7 +40,7 @@ animation: AnimationName 12s ease infinite;">
                 based on validated requirements.</p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
-        <br />
+        <br /><br />
 
         <section id="content">
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
@@ -237,7 +237,9 @@ function animate() {
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <br />
+        </section>
+            <br /><br />
+            <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">Responsive Web Design</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
