--- a/ptm.html
+++ b/ptm.html
@@ -31,7 +31,7 @@ animation: AnimationName 12s ease infinite;">
 
         <div id="title">
             <h2 id="titleText">Project</h2>
-        </div><br />
+        </div><br /><br />
 
         <div id="learningOutcome">
             <h1 style="text-align: center;font-style: 40px;">Learning Outcome</h1>
@@ -40,7 +40,7 @@ animation: AnimationName 12s ease infinite;">
             </p>
         </div>
 
-        <br />
+        <br /><br />
 
         <section id="content">
             <article id="artistic_exploration">
@@ -57,7 +57,9 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-
+        </section>
+        <br /><br />
+        <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">AR Filter</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
@@ -87,8 +89,10 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <br />
-
+        </section>>
+        <br />
+        <br />
+        <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">Aisha’s Online Quest </h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
