--- a/ux.html
+++ b/ux.html
@@ -30,7 +30,9 @@ animation: AnimationName 12s ease infinite;">
 
         <div id="title">
             <h2 id="titleText">User Experience Design</h1>
-        </div><br />
+        </div>
+
+        <br /><br />
 
         <div id="learningOutcome">
             <h2 style="text-align: center;font-size: 40px;">Learning Outcome</h2>
@@ -39,7 +41,7 @@ animation: AnimationName 12s ease infinite;">
                 and on user consults. </p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
-        <br />
+        <br /><br />
 
         <div class="contentDivider">
             <h1 style="text-align:center;font-size: 40px;">Research</h1>
@@ -79,7 +81,7 @@ animation: AnimationName 12s ease infinite;">
                 </article>
             </section> -->
             <article id="interview">
-                <h1 style="font-size:40px;margin:0px;">The Interview</h1>
+                <h1 style="font-size:40px;margin:0px;">Interview</h1>
                 <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
                 <h2 style="margin:0px;">Interview Preparation</h2>
                 <p></p>
@@ -109,13 +111,17 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+        </section>
 
-            <br />
+        <br /><br />
+        <section id="content">
 
             <article>
                 <h2 style="font-size:40px;margin:0px;">Task Analysis</h2>
                 <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
-                <p>With task analysis i am able to organize my task to reach a certain goal that are desired. Also accompanied with the user stories, i can see on how would the perspective of the user be and adjust the end-product to meet the expectation.</p>
+                <p>With task analysis i am able to organize my task to reach a certain goal that are desired. Also
+                    accompanied with the user stories, i can see on how would the perspective of the user be and adjust
+                    the end-product to meet the expectation.</p>
                 <embed src="content/UEX_Task_Analysis.pdf" type="application/pdf"></embed>
 
                 <div class="feedback">
@@ -124,8 +130,8 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <br />
-            <!--<article>
+        </section>
+        <!--<article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
                 <p></p>Lorem ipsum dolor sit amet.</p>
@@ -136,10 +142,9 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>-->
-        </section>
 
 
-        <br />
+        <br /><br />
 
         <div class="contentDivider">
             <h1 style="text-align:center;font-size: 40px;">Prototype</h1>
@@ -161,14 +166,18 @@ animation: AnimationName 12s ease infinite;">
                         I now know that a storyboard can be a useful tool for UX design.</p>
                 </div>
             </article>
+        </section>
 
-            <br />
+        <br /><br />
 
+        <section id="content">
             <article>
 
                 <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
                 <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
-                <p>Before starting development of this portfolio, i need to conceptualize the style and how the interface should look like. My direction is to make a clean minimalist and presentable looking site with an intuitive interface.</p>
+                <p>Before starting development of this portfolio, i need to conceptualize the style and how the
+                    interface should look like. My direction is to make a clean minimalist and presentable looking site
+                    with an intuitive interface.</p>
                 <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
                 <div class="feedback">
                     <h1>Feedback</h1>
@@ -176,9 +185,11 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+        </section>
 
-            <br />
+        <br /><br />
 
+        <section id="content">
             <article>
                 <h2 style="font-size:40px;margin:0px;">Video Prototype</h2>
                 <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
