--- a/sco.html
+++ b/sco.html
@@ -32,7 +32,7 @@ animation: AnimationName 12s ease infinite;">
             <h2 id="titleText">Strategy & Concept</h2>
         </div>
 
-        <br />
+        <br /><br />
 
         <div id="learningOutcome">
             <h2 style="text-align: center;font-style: 40px;">Learning Outcome</h2>
@@ -43,7 +43,7 @@ animation: AnimationName 12s ease infinite;">
                 and examples from the professional field.</p>
         </div>
 
-        <br />
+        <br /><br />
 
         <div class="contentDivider">
             <h1 style="text-align:center;font-size: 40px;margin: 20px 0px 0px 0px;">Concept</h1>
@@ -52,32 +52,35 @@ animation: AnimationName 12s ease infinite;">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Photography</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>During the intro week, i learnt a lot of valuable lessons about photography. I finally know how to manually operate a camera such as finding the optimal exposure using the <em>exposure triangle</em>, finding the right angle to create drama, and adjusting RAW image file post-shooting to refine the image. </p>
+                <p>During the intro week, i learnt a lot of valuable lessons about photography. I finally know how to
+                    manually operate a camera such as finding the optimal exposure using the <em>exposure triangle</em>,
+                    finding the right angle to create drama, and adjusting RAW image file post-shooting to refine the
+                    image. </p>
                 <br />
-                    <div class="slideshow-container">
-                        <!-- Full-width images with number and caption text -->
-                        <div class="mySlides fade">
-                            <div class="numbertext">1 / 3</div>
-                            <img src="content/photography/img1.JPG" style="width:100%">
-                            <div class="text">Van Abbemuseum</div>
-                        </div>
-
-                        <div class="mySlides fade">
-                            <div class="numbertext">2 / 3</div>
-                            <img src="content/photography/img2.JPG" style="width:100%">
-                            <div class="text">Philipsdorp</div>
-                        </div>
-
-                        <div class="mySlides fade">
-                            <div class="numbertext">3 / 3</div>
-                            <img src="content/photography/img3.JPG" style="width:100%">
-                            <div class="text">Gerard Phillipslaan</div>
-                        </div>
-
-                        <!-- Next and previous buttons -->
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <div class="slideshow-container">
+                    <!-- Full-width images with number and caption text -->
+                    <div class="mySlides fade">
+                        <div class="numbertext">1 / 3</div>
+                        <img src="content/photography/img1.JPG" style="width:100%">
+                        <div class="text">Van Abbemuseum</div>
                     </div>
+
+                    <div class="mySlides fade">
+                        <div class="numbertext">2 / 3</div>
+                        <img src="content/photography/img2.JPG" style="width:100%">
+                        <div class="text">Philipsdorp</div>
+                    </div>
+
+                    <div class="mySlides fade">
+                        <div class="numbertext">3 / 3</div>
+                        <img src="content/photography/img3.JPG" style="width:100%">
+                        <div class="text">Gerard Phillipslaan</div>
+                    </div>
+
+                    <!-- Next and previous buttons -->
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
                 <br />
                 <div class="feedback">
                     <h1>Feedback</h1>
@@ -85,7 +88,10 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <br />
+        </section>
+        <br />
+        <br />
+        <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Visual Association</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
@@ -101,14 +107,19 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <br />
+        </section>>
+        <br /><br />
+        <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Colour Palletes</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
                 <!-- <p></p>Lorem ipsum dolor sit amet.</p> -->
-                <p>Below is moodboard consisting of the colour pallete i have originally made for the client based on the client preference of pastel
+                <p>Below is moodboard consisting of the colour pallete i have originally made for the client based on
+                    the client preference of pastel
                     colours and "iridescent" style.</p>
-                    <p>The way i create this moodboard is to first define the analogous color palletes in Adobe Color and to put in a 3D software(i use Cinema 4D) to give an better look of how the 'iridescent' object would look like in context with the color scheme. </p>
+                <p>The way i create this moodboard is to first define the analogous color palletes in Adobe Color and to
+                    put in a 3D software(i use Cinema 4D) to give an better look of how the 'iridescent' object would
+                    look like in context with the color scheme. </p>
 
                 <img class="contentAttachment" src="content/ConceptingColor.jpg">
 
@@ -118,7 +129,9 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <!--<article>
+        </section>
+        <br /><br />
+        <!--<article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
                 <p></p>Lorem ipsum dolor sit amet.</p>
@@ -129,12 +142,14 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>-->
+        <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Brand Style Guide</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
-                <p>A brandguide is a useful as a reference tool to help maintain consistency in what a brand looks, feels, and sounds like.</p>
+                <p>A brandguide is a useful as a reference tool to help maintain consistency in what a brand looks,
+                    feels, and sounds like.</p>
                 <p>I have partake in making this brandguide as a part of the deliverables for the client.</p>
-                
+
                 <embed src="content/brandguide5.pdf" type="application/pdf"></embed>
 
                 <div class="feedback">
@@ -145,7 +160,7 @@ animation: AnimationName 12s ease infinite;">
             </article>
         </section>
 
-        <br />
+        <br /><br />
 
         <div class="contentDivider">
             <h1 style="text-align:center;font-size: 40px;">Strategy</h1>
@@ -174,8 +189,11 @@ animation: AnimationName 12s ease infinite;">
                         <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                     </div>
             </article>
-            <br />
+        </section>
+        <br />
+        <br />
 
+        <section id="content">
             <article id="cjm">
                 <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Customer Journey Map</h4>
                     <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
@@ -189,8 +207,7 @@ animation: AnimationName 12s ease infinite;">
                     <a href="" style="color: grey;">Target audience exercise 2</a>
                     <a href="" style="color: grey;">Target audience exercise 3</a> -->
                     <p>In this assignment i have made a customer journey map of the client.</p>
-                    <img class="contentAttachment" src="content/CJM.png"
-                            alt="Missing file">
+                    <img class="contentAttachment" src="content/CJM.png" alt="Missing file">
                     <p>The CJM above describes the states of how the customer would react to the artist, in more detail:
                     </p>
                     <h2 style="margin-bottom: 0;">Awareness</h2>
@@ -219,18 +236,25 @@ animation: AnimationName 12s ease infinite;">
                         <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                     </div>
             </article>
-            
-            <br />
+        </section>
 
+        <br /><br />
+
+        <section id="content">
             <article>
-                <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Brand-, Market- and Competitive Analysis</h4>
+                <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Brand-, Market- and Competitive Analysis
+                    </h4>
                     <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
                     <h2>Brand Analysis</h2>
-                    <p>Our client is passionate about her career as an artist regardless her experince as a fresh new artist. Aisha's vision is to spread happiness and good feelings through her music and caters to a fairly young audience. </p>
+                    <p>Our client is passionate about her career as an artist regardless her experince as a fresh new
+                        artist. Aisha's vision is to spread happiness and good feelings through her music and caters to
+                        a fairly young audience. </p>
                     <h2>Market Analysis</h2>
-                    <p>The most prevalent platform our client has is her social media especially her Instagram page. She mostly distribute her content through it and her audience could react to her feeds quickly.</p>
+                    <p>The most prevalent platform our client has is her social media especially her Instagram page. She
+                        mostly distribute her content through it and her audience could react to her feeds quickly.</p>
                     <h2>Competitive Analysis</h2>
-                    <p>As a group we did an online research to compare on how would our client compete with other artists with a similar target audience.</p>
+                    <p>As a group we did an online research to compare on how would our client compete with other
+                        artists with a similar target audience.</p>
                     <embed src="content/marketanalysis.pdf" type="application/pdf"></embed>
                     <div class="feedback">
                         <h1>Feedback</h1>
