--- a/ux.html
+++ b/ux.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/styleNoContentMargin.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
@@ -41,14 +42,13 @@ animation: AnimationName 12s ease infinite;">
                 and on user consults. </p>
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
-        <br /><br />
+        <br />
 
         <div class="contentDivider">
-            <h1 style="text-align:center;font-size: 40px;">Research</h1>
-        </div>
+            <h1 id="dividerText">Research</h1>
 
-        <section id="content">
-            <!-- <section id="prologue" style="padding:0px;background:rgba(0,0,0,0.75);color: white; padding: 30px 30px 30px; margin-top: 20px;">
+            <section id="content">
+                <!-- <section id="prologue" style="padding:0px;background:rgba(0,0,0,0.75);color: white; padding: 30px 30px 30px; margin-top: 20px;">
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Essentials of User-Centered Design</h2>
                 <article>
                     <h2 style="font-size: 40px;margin:0px;">Empathize</h2>
@@ -80,58 +80,59 @@ animation: AnimationName 12s ease infinite;">
                         outcome.</p>
                 </article>
             </section> -->
-            <article id="interview">
-                <h1 style="font-size:40px;margin:0px;">Interview</h1>
-                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
-                <h2 style="margin:0px;">Interview Preparation</h2>
-                <p></p>
-                <p>The purpose of the interview is to find out the needs of the client's target audience. This can
-                    be
-                    about the artist themself, the genre of the music the target audience is interested in, or even
-                    matters outside
-                    music that contributes to the experience such as what are the platform are the audience uses to
-                    listen and many other.
-                </p>
-                <h2 style="margin:0px;">Preparing the form</h2>
-                <p>As part of the exercise, a questionnaire is prepared in order to gather data from the target
-                    audience. This questionnaire covers basic questions to get the general idea of how to target
-                    audience is.</p>
-                <!-- <a href="content/Interview Research Form.nl.en.docx">Link to the questionnaire</a> -->
-                <embed src="content/Interview Research Form.nl.en.pdf" type="application/pdf"></embed>
-                <h2 style="margin:0px;">Interview Result</h2>
-                <p>Conclusions from the interview reveals:</p>
-                <p>•Our client’s target group is predominantly constituted out of women.
-                </p>
-                <p>•Age ranges between 14–19 years old</p>
-                <p>•We can find this group being active in social media such as Instagram, Snapchat, etc.</p>
+                <article id="interview">
+                    <h1 style="font-size:40px;margin:0px;">Interview</h1>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
+                    <h2 style="margin:0px;">Interview Preparation</h2>
+                    <p></p>
+                    <p>The purpose of the interview is to find out the needs of the client's target audience. This can
+                        be
+                        about the artist themself, the genre of the music the target audience is interested in, or even
+                        matters outside
+                        music that contributes to the experience such as what are the platform are the audience uses to
+                        listen and many other.
+                    </p>
+                    <h2 style="margin:0px;">Preparing the form</h2>
+                    <p>As part of the exercise, a questionnaire is prepared in order to gather data from the target
+                        audience. This questionnaire covers basic questions to get the general idea of how to target
+                        audience is.</p>
+                    <!-- <a href="content/Interview Research Form.nl.en.docx">Link to the questionnaire</a> -->
+                    <embed src="content/Interview Research Form.nl.en.pdf" type="application/pdf"></embed>
+                    <h2 style="margin:0px;">Interview Result</h2>
+                    <p>Conclusions from the interview reveals:</p>
+                    <p>•Our client’s target group is predominantly constituted out of women.
+                    </p>
+                    <p>•Age ranges between 14–19 years old</p>
+                    <p>•We can find this group being active in social media such as Instagram, Snapchat, etc.</p>
 
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-        </section>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    </div>
+                </article>
+            </section>
 
-        <br /><br />
-        <section id="content">
+            <br /><br />
+            <section id="content">
 
-            <article>
-                <h2 style="font-size:40px;margin:0px;">Task Analysis</h2>
-                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
-                <p>With task analysis i am able to organize my task to reach a certain goal that are desired. Also
-                    accompanied with the user stories, i can see on how would the perspective of the user be and adjust
-                    the end-product to meet the expectation.</p>
-                <embed src="content/UEX_Task_Analysis.pdf" type="application/pdf"></embed>
+                <article>
+                    <h2 style="font-size:40px;margin:0px;">Task Analysis</h2>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
+                    <p>With task analysis i am able to organize my task to reach a certain goal that are desired. Also
+                        accompanied with the user stories, i can see on how would the perspective of the user be and
+                        adjust
+                        the end-product to meet the expectation.</p>
+                    <embed src="content/UEX_Task_Analysis.pdf" type="application/pdf"></embed>
 
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-        </section>
-        <!--<article>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    </div>
+                </article>
+            </section>
+            <!--<article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
                 <p></p>Lorem ipsum dolor sit amet.</p>
@@ -142,69 +143,74 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>-->
-
+        </div>
 
         <br /><br />
 
         <div class="contentDivider">
-            <h1 style="text-align:center;font-size: 40px;">Prototype</h1>
+            <h1 id="dividerText">Prototype</h1>
+            <section id="content">
+                <article id="storyboard">
+                    <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
+                    <p>A storyboard was originally used for the film industry. In designing user experience it is used
+                        as a
+                        tool to visualize an idea or a concept, to describe the context use of a product, and to show
+                        the
+                        emotional appeal of the product.</p>
+                    <p>In this exercise i have made a simple yet understandable storyboard all drawn straight digitally.
+                    </p>
+                    <img class="contentAttachment" src="content/storyboard.png"></img>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">As feedback from Jo-An the storyboard looks nice
+                            and
+                            understandable.
+                            I now know that a storyboard can be a useful tool for UX design.</p>
+                    </div>
+                </article>
+            </section>
+
+            <br /><br />
+
+            <section id="content">
+                <article>
+
+                    <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                    <p>Before starting development of this portfolio, i need to conceptualize the style and how the
+                        interface should look like. My direction is to make a clean minimalist and presentable looking
+                        site
+                        with an intuitive interface.</p>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    </div>
+                </article>
+            </section>
+
+            <br /><br />
+
+            <section id="content">
+                <article>
+                    <h2 style="font-size:40px;margin:0px;">Video Prototype</h2>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <video class="contentAttachment" width="1920" height="1080" controls>
+                        <source src="" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    </div>
+                </article>
+            </section>
         </div>
-        <section id="content">
-            <article id="storyboard">
-                <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
-                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
-                <p>A storyboard was originally used for the film industry. In designing user experience it is used as a
-                    tool to visualize an idea or a concept, to describe the context use of a product, and to show the
-                    emotional appeal of the product.</p>
-                <p>In this exercise i have made a simple yet understandable storyboard all drawn straight digitally.</p>
-                <img class="contentAttachment" src="content/storyboard.png"></img>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">As feedback from Jo-An the storyboard looks nice and
-                        understandable.
-                        I now know that a storyboard can be a useful tool for UX design.</p>
-                </div>
-            </article>
-        </section>
-
-        <br /><br />
-
-        <section id="content">
-            <article>
-
-                <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
-                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
-                <p>Before starting development of this portfolio, i need to conceptualize the style and how the
-                    interface should look like. My direction is to make a clean minimalist and presentable looking site
-                    with an intuitive interface.</p>
-                <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-        </section>
-
-        <br /><br />
-
-        <section id="content">
-            <article>
-                <h2 style="font-size:40px;margin:0px;">Video Prototype</h2>
-                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <video class="contentAttachment" width="1920" height="1080" controls>
-                    <source src="" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-        </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
