--- a/ptm.html
+++ b/ptm.html
@@ -134,7 +134,7 @@ animation: AnimationName 12s ease infinite;">
                 <p>At the end, the website is a poster of Aisha. The poster of Aisha is actually a QR-code to the prize
                     of the Quest. If you scan the code you will get redirected to another part of the website containing
                     a Snapchat-code. If you scan the code you will get a new filter on your snapchat account. The
-                    Snapchat-filter is the price after completing the Online Quest.</p>
+                    Snapchat-filter is the reward after completing the Online Quest.</p>
                 <img class="contentAttachment" src="content/oq5.png"></img>
 
                 <div class="feedback">
