--- a/dev.html
+++ b/dev.html
@@ -38,7 +38,6 @@ animation: AnimationName 12s ease infinite;">
             <p style="text-align: center;">Ability to develop media products by programming and integrating proofs of
                 concepts
                 based on validated requirements.</p>
-            <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
         <br /><br />
 
@@ -116,21 +115,21 @@ animation: AnimationName 12s ease infinite;">
                     <source src="content/intuitiveNavbar.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <p>In the process of implementing this POC, i needed to learn a CSS pre-processor in order to manipulate the burger menu so i've had learnt on how to use SCSS from this exercise.</p>
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
-            </article>
-        </section>
+            </article></section>
         <br /><br />
         <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">Responsive Web Design</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
-                <p>Nowadays people uses many forms of digital devices to open websites. Sometimes you open a website
+                <!-- <p>Nowadays people uses many forms of digital devices to open websites. Sometimes you open a website
                     on
-                    a PC and other times on your personal phone. But when viewing a website on a smaller screen real
+                    a PC and other times on your personal phone. But</p>--> <p>When viewing a website on a smaller screen real 
                     estate the website needs to scale accordingly otherwise the elements will clip.
                 </p>
                 <p>In this sprint i have implemented a responsive design to this portofolio. Now it can be viewed
@@ -139,6 +138,15 @@ animation: AnimationName 12s ease infinite;">
                     <source src="content/rwd_preview.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <p>Implementing this POC is relatively simple as it only took only took a few lines of CSS condition code to tell the browser to resize accordingly depending on the screen size.</p>
+                <div class="contentPlaceholder"><pre><code>
+@media only screen and (max-width: 40em) {
+    .content {
+        margin: 0px;
+    }
+}
+                </code></pre></div>
+                <p>Even though the syntax is simple, i needed to redesign the interface to fit accordingly so i have to make adjustment to the <code>.content</code> class to fit block-level element.</p>
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
@@ -158,7 +166,7 @@ animation: AnimationName 12s ease infinite;">
                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
                     accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>-->
                 <p>As part of the process for me to practice my Javascript skills i decided to make an interactive
-                    visual that is <em>now playing on the background of this site</em> by using ThreeJS web 3D graphics
+                    visual that is <em>now playing</em> on the background of this site by using ThreeJS JavaScript web 3D graphics
                     library.</p>
                 <div class="contentPlaceholder" style="text-align: center;">
                     <video class="contentAttachment" width="1920" height="1080" controls>
@@ -176,7 +184,7 @@ animation: AnimationName 12s ease infinite;">
                 <ul>
                     <li>the scene itself</li>
                     <li>a camera to see the scene</li>
-                    <li>a renderer to display the scene unto the screen</li>
+                    <li>a renderer to display the scene unto the canvas</li>
                 </ul>
                 <div class="contentPlaceholder"><code>
                         <pre>
@@ -200,10 +208,9 @@ document.body.appendChild(renderer.domElement); //create canvas on the html body
 </pre></code></div>
                 <br />
                 <h2>2. Interactive Controls</h2>
-                <p>Then i use an additional ThreeJS library called OrbitControls.js to add interactive camera controls
+                <p>Then i use an additional ThreeJS library module called OrbitControls.js to add interactive camera controls
                     for
-                    the user to navigate around the 3D space. Then i also modify a few parameters of the OrbitControls
-                    to make it <em>pan smoothly</em> as the user navigates around the space.</p>
+                    the user to navigate around the 3D space. Then i also modify a few parameters to add damping so that the camera will <em>pan smoothly</em> as the user navigates around the space.</p>
                 <div class="contentPlaceholder"><code>
                         <pre>
 // controls
@@ -222,10 +229,10 @@ controls.rotateSpeed = 0.8;
                 <h2>3. Inheritance Cloner</h2>
                 <p>I wanted to have a very dynamic visuals to fill the whole screen and i spent a lot of time
                     experimenting on this. From my experience from using 3D software suites such as Cinema 4D and
-                    Blender, i know that 3D object can be 'cloned' using a cloner tool. So with the help of Mr.Chris
-                    Geene i was mentored of how to create an 'inheritance cloner' by creating multiple meshes(each time in different location according to the index) of the
+                    Blender, i know that objects can be 'cloned' using a cloner tool. So with the help of Mr.Chris
+                    Geene i was mentored on how to create an 'inheritance cloner' by creating multiple meshes(each time in slightly different location according to the index) of the
                     object using <code>for-loop</code> statement then adding each meshes to an object array then to use an
-                    <code>if statement</code> to 'inherit' every newly created mesh to its predecessor thus mirroring the attributes(such as position and rotation) of the parent. </p>
+                    <code>if</code> statement to 'inherit' every newly created mesh to its predecessor thus mirroring the attributes(such as position and rotation) of the parent. </p>
                 <div class="contentPlaceholder">
                     <pre><code>
 // cloner
@@ -249,7 +256,7 @@ objArray.push(meshes);
                 <h2>4. Animating the objects to move based on the 'Golden Ratio'</h2>
                 <p>The last step is to animate the objects, the goal i had in mind is to make the objects move(in
                     rotation) with some
-                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects rotate according to the
+                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects move according to the
                     <em>golden ratio</em>.</p>
                 <div class="contentPlaceholder">
                     <pre><code>
@@ -259,7 +266,6 @@ function animate() {
     controls.update();
     
     // golden ratio animation
-    var div = 512;
     for (var x = 0; x < objArray.length; x++) {
       objArray[x].rotation.x += Math.PI / 2;
       objArray[x].rotation.y += Math.PI / 4;
