--- a/sco.html
+++ b/sco.html
@@ -258,7 +258,7 @@ animation: AnimationName 12s ease infinite;">
 
             <section id="content">
                 <article>
-                    <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Brand-, Market- and Competitive
+                    <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Brand-, Market-, and Competitive
                         Analysis
                         </h4>
                         <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
